--- a/caravan/style.css
+++ b/caravan/style.css
@@ -12,13 +12,13 @@
 
 .header-top {
   width: 100%;
-  height: 100px;
+  height: 70px;
   background-color: hotpink;
 }
 
 .header-bottom {
   width: 100%;
-  height: 100px;
+  height: 50px;
   background-color: pink;
 }
 
@@ -28,10 +28,31 @@
   background-color: orange;
 }
 
+.main-visual-content {
+  width: 350px;
+  height: 300px;
+  background-color: gold;
+}
+
 .main {
-  width: 100%;
+  width: 840px;
   height: 1400px;
-  background-color: green;
+  /*background-color: green;*/
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.blog {
+  width: 600px;
+  height: 1400px;
+  background-color: limegreen;
+}
+
+.sidebar {
+  width: 240px;
+  height: 1400px;
+  background-color: palegreen;
 }
 
 .footer {
