--- a/caravan/style.css
+++ b/caravan/style.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box
+  color: #6c6b6b;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -58,5 +63,17 @@ header .heading {
   width: 240px;
   height: 1400px;
   background-color: palegreen;
+}
+
+footer {
+  width: 100%;
+  height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
 }
 
