--- a/caravan/style.css
+++ b/caravan/style.css
@@ -21,15 +21,15 @@ header {
   position: relative;
 }
 
+.social i {
+  display: inline-block;
+  margin-left: 20px;
+}
+
 .social {
   position: absolute;
   top: 22px;
   right: 22px;
-}
-
-.social i {
-  display: inline-block;
-  margin-left: 20px;
 }
 
 header .heading {
@@ -183,12 +183,12 @@ main {
   width: 110px;
   padding-top: 110px;
   background-size: cover;
-  background-position: cover;
+  background-position: center;
   margin-bottom: 10px;
 }
 
 .instagram-box:nth-child(odd) {
-  margin: 0 10px 10px 0;
+  margin-right: 10px;
 }
 
 .instagram-box:nth-child(1) {
@@ -227,16 +227,78 @@ footer {
   color: #fff;
 }
 
-
-@media screen and (max-width: 425px) {
-  html {
-    color: red;
+@media screen and (max-width:425px) {
+  header {
+    width: 100%
+  }
+  
+  .nav-list {
     width: 100%;
   }
-}
-
-@media screen and (max-width: 425px) {
-  .blog-item {
-    display: block;
+  
+  .nav-list-item {
+    width: 100%;
+    margin: 0 0 10px 0;
   }
+  
+  .social {
+    display: none;
+  }
+  
+  .main-visual {
+    width: 100%;
+  }
+  
+  .main-visual-content {
+    width: 100%;
+  }
+  
+  main {
+    max-width: 100%;
+    min-width: initial;
+    display: block;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+  
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  
+  .blog-image {
+    width: 49%;
+  }
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+  
+  .sidebar {
+    width: 100%;
+  }
+  
+  .sidebar-contents {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+  
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+  
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+  
+  .pagination {
+    margin-bottom: 50px;
+  }
+  
 }
