--- a/caravan/style.css
+++ b/caravan/style.css
@@ -227,7 +227,7 @@ footer {
   color: #fff;
 }
 
-@media screen and (max-width:425px) {
+@media screen and (max-width: 425px) {
   header {
     width: 100%
   }
@@ -254,11 +254,8 @@ footer {
   }
   
   main {
-    max-width: 100%;
-    min-width: initial;
+    width: 100%;
     display: block;
-    margin: 0;
-    padding: 0;
   }
   
   .blog {
